--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="author" content="Aryan Jaiswal">
+    <meta property="og:title" content="FinTrack - Smart Finance Manager" />
+    <meta property="og:description" content="A modern expense tracker built with React, Vite, Tailwind and Firebase." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FinTrack - Smart Finance Manager</title>
   </head>
